updated hero to fix font sizing on mobile. Update nav to do the same. Updated contact form to enable clouldflare turnstyle to prevent spam. Enabled on formspree as well.

--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -126,5 +126,6 @@
   }
   .hero-content p {
     font-size: 1.2rem;
+    padding: 1rem;
   }
 }
