--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -70,7 +70,7 @@
   }
 
   .header-container h2 {
-    font-size: 30px;
+    font-size: 3rem;
     letter-spacing: 6px;
   }
 
